# Hybrid-Schedule-Organizer

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
assets/img/: Plan.drawio
demo/: .gitignore  index.html  index.js  package-lock.json  package.json
js/: index.js
old/demo/: .gitignore  index.html  index.js  package-lock.json  package.json
old/web-version/: Cargo.toml
old/web-version/pkg/: hybrid_schedule_organizer.js  hybrid_schedule_organizer_bg.js  package-lock.json  package.json
src/: lib.rs
static/: index.html
web-version/: README.md
web-version/pkg/: README.md  hybrid_schedule_organizer_bg.wasm
