[package]
name = "hybrid-schedule-organizer"
version = "0.0.1"
authors = ["madprogramer <themadprogramer@gmail.com>"]
edition = "2018"
description = "A Schedule Organizer for Schools Pursuing Hybrid Education"
license = "MIT"
repository = "https://github.com/Hybrid-Education-Action-Team/Hybrid-Schedule-Organizer"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"